# mulch

./: .gitignore  Cargo.toml
mulch_macros/: Cargo.toml
mulch_macros/src/: from_to_u8.rs  gc_debug.rs  gc_eq.rs  gc_fn.rs  gc_project.rs  gc_ptr.rs  lib.rs  parser.rs  util.rs
mulch_macros/src/gc_project/: enum_.rs  struct_.rs
mulch_macros/src/parser/: parse.rs
mulch_macros/src/parser/parse/: enum_.rs  struct_.rs
src/: error.rs  eval.rs  gc.rs  lexer.rs  lib.rs  macro_util.rs  main.rs  parser.rs  parser_old.rs  util.rs
src/error/: parse.rs  sourcedb.rs  spanned.rs
src/error/sourcedb/: util.rs
src/eval/: error.rs  lazyvalue.rs  list.rs  scope.rs  set.rs
src/gc/: collection.rs  gcspace.rs  primitives.rs  roots.rs  safety.rs  test.rs  traits.rs  util.rs
src/gc/collection/: gcvalue.rs  test.rs
src/gc/gcspace/: string.rs  vec.rs
src/gc/primitives/: boxed.rs  buffer.rs  math.rs  string.rs  vec.rs
src/gc/primitives/math/: number.rs  rational.rs  uint.rs  util.rs
src/gc/safety/: function_call.rs
src/lexer/: error.rs  test.rs  types.rs
src/lexer/test/: error_test.rs  proptest.rs
src/parser/: ast.rs  attr_set.rs  binary.rs  bracketed.rs  error.rs  ident.rs  keyword.rs  lambda.rs  let_in.rs  punct.rs  separatedlist.rs  test.rs  traits.rs  util.rs
src/parser/ast/: ident_or_string.rs  lambda.rs  literal.rs  operation.rs
src/parser/test/: numeric.rs  util.rs
src/parser/util/: non_bracketed_iter.rs  not_preceded_by.rs
src/parser_old/: attr_set.rs  binary.rs  error.rs  lambda.rs  let_in.rs  test.rs  util.rs
src/util/: ivec.rs  test.rs
src/util/ivec/: test.rs
(+1 files in other folders)
