[package]
name = "mulch"
version = "0.1.0"
edition = "2024"

[dependencies]
codespan-reporting = { version = "0.12.0", default-features = false, features = ["std", "termcolor"] }
copyspan = "0.1.0"
num-bigint = { version = "0.4.6", default-features = false, features = ["std"] }
num-rational = { version = "0.4.2", default-features = false, features = ["num-bigint", "num-bigint-std", "std"] }

[dev-dependencies]
itertools = "0.14.0"
proptest = "1.6.0"
