[package]
name = "mulch"
version = "0.1.0"
edition = "2024"

[dependencies]
codespan-reporting = { version = "0.12.0", default-features = false, features = ["std", "termcolor"] }
copyspan = "0.1.0"
fraction = "0.15.3"
indoc = "2.0.6"
itertools = { version = "0.14.0", default-features = false, features = ["use_alloc", "use_std"] }
mulch_macros = { version = "0.1.0", path = "mulch_macros" }

[dev-dependencies]
itertools = "0.14.0"
proptest = "1.6.0"
